Sat Nov 07 21:37:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/cachemanager.py: Allow iter_by_docid() to return
	  the query ids as something other than a list.

Mon Nov 02 17:53:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager/generic.py,xappy/cachemanager/xapian_manager.py,
	  xappy/unittests/cachemanager.py: Modify the
	  KeyValueStoreCacheManager to be a UserDict.DictMixin subclass,
	  and use the standard __getitem__, etc, accessors.  It doesn't
	  quite match the API contract of DictMixin because all keys are
	  always present as far as getitem and delitem are concerned: their
	  value is '' if they haven't already been assigned to, and
	  deleting just sets the value to ''.  However, it's close enough
	  that this is useful for debugging purposes.

Mon Nov 02 17:15:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager.py,xappy/cachemanager/__init__.py,
	  xappy/cachemanager/generic.py,xappy/cachemanager/xapian_manager.py:
	  Refactor cachemanager into a submodule, and separate the
	  xapian-based cache into a separate file, so we can do a
	  conditional import of it, handling the caes of Xapian not being
	  installed more cleanly.

Mon Nov 02 03:28:35 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Pass the xappy.Query to the
	  SearchResults object, not the xapian Query.

Mon Nov 02 03:14:55 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/cachemanager.py,xappy/indexerconnection.py,
	  xappy/searchconnection.py: Initial implementation of pre-cached
	  searches.  Uses the value slots to hold information about the
	  ranks assigned by the pre-cached searches, which is relatively
	  inefficient on flint.
	* xappy/unittests/cachemanager.py: Test of the cachemanager
	  implemetnation.
	* xappy/unittests/cached_searches.py: Test that searches using the
	  cachemanager work correctly.
