@@ -1,3 +1,8 @@
+Sun Nov 08 11:06:15 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/cachemanager.py: Extend test to check what
+	  happens when the supplied ranks are over estimates.
+
 Sat Nov 07 21:37:52 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/unittests/cachemanager.py: Allow iter_by_docid() to return
